@@ -157,7 +157,6 @@ int usockfd_check(int sockfd, const sigset_t *sigset)
     socklen_t size;
     fd_set readfds;
     int ret;
-    struct timeval tv;
      
     FD_ZERO(&readfds);
     FD_SET(sockfd, &readfds);
@@ -177,13 +176,6 @@ int usockfd_check(int sockfd, const sigset_t *sigset)
                 return 0;
             LOG(log_error, logtype_cnid, "error in accept: %s", 
                 strerror(errno));
-            return -1;
-        }
-        tv.tv_sec = 5;
-        tv.tv_usec = 0;
-        if (setsockopt(fd, SOL_SOCKET, SO_RCVTIMEO, &tv, sizeof(tv)) < 0) {
-            LOG(log_error, logtype_cnid, "set SO_RCVTIMEO: %s", strerror(errno));
-            close(fd);
             return -1;
         }
         return fd;
